# claude-ai-tools

./: .gitignore  AGENTS.md  ASSISTANT_UPGRADE_PLAN.md  CLAUDE.md  CLAUDE_REFERENCE.md  DESKTOP.md  FLOOR_PLAN_READING_PROCEDURE.md  ORGANIZATION_ASSESSMENT_2026-01-25.md  QUICK_KEYS.md  SYSTEM_AUDIT_2026-02-15.md  SYSTEM_INVENTORY.md  WEBER_WORKFLOWS.md  WINDOW_MANAGEMENT.md.bak  Weber_Gouin_Resume.txt  Weber_Gouin_Resume_Dev.html  _ocr_temp_output2.tsv  _ocr_temp_output3.tsv  _revit_cmd.ps1  agent_cli.py  avon_park_accurate.json  avon_park_analysis.json  avon_park_area_correct.ps1  avon_park_final.ps1  avon_park_traced.ps1  avon_park_walls.json  background-workflow-example.md  bookmarked_tech.md  cdp_interact.ps1  cdp_resend_signup.ps1  cdp_run_file.ps1  cdp_tabs.json  check_outlier2.mjs  check_resend.js  check_resend2.js  check_status.mjs  cleanup-claude-conversations.sh  click.ps1  click_load_family.py  click_optimizer.py  clickworker_2fa_check.mjs  (+432 more)
BridgeAI/: BridgeAI.bat  CLAUDE.md  README.md  START_ALL_SERVICES.bat  Start-BridgeAI.ps1  automation_service_fixed.py  autonomous-agent-prd.md  bridge.py  send_task.py
Claude-code-CA/: CAPTURE_FIXED.txt  README.md  ai_assistant.py  ai_memory.py  ai_orchestrator.py  close_dialog_now.ps1  complete_task_automation.ps1  fix_copilot_dialog.ps1  force_close_dialog.ps1  powershell_executor.py  quick_close_dialog.ps1  requirements.txt  robust_ui_automation.ps1  safe_ui_automation.ps1  screen_analyzer.py  setup_ai_assistant.ps1
ClaudeSTT/: .gitignore  README.md  build.ps1  deploy.ps1  install.ps1  quickstart.ps1  setup_terminal.ps1  v.ps1  vf.ps1  voice.ps1
Claude_Skills/: SKILLS_GUIDE.md  autonomous-checkpoints.skill  autonomous-pipeline.skill  bd-project-init.skill  bim-quality-validator.skill  cd-set-assembly.skill  claude-orchestration.skill  code-review-helper.skill  context-management.skill  email-drafter.skill  idea-validator.skill  launch-planner.skill  marketing-writer.skill  markup-to-model.skill  meeting-notes-processor.skill  pdf-to-rentable-sf.skill  pdf-to-revit.skill  product-designer.skill  product-manager.skill  revit-mcp-gotchas.skill  revit-model-builder.skill
adaptive-retry/: retry_cli.py  retry_engine.py  strategies.json
aec-drafting-ai/: project_registry.json  resolve_project.py
agent-boost/: agent_preamble.md  build_context.py  handoff_schema.py  pipeline_agent.md  pipeline_dispatcher.py  strong_agent.md  worktree_policy.md
agent-common-sense/: __init__.py  agent_schema.py  aggregator.py  alignment.py  alignment_hook.py  api.py  autocapture.py  coherence.py  context.py  context_compressor.py  coordinator.py  domains.py  feedback.py  goals.py  hooks.py  inject.py  kernel-core.md  kernel-corrections.md  kernel.md  kernel.md.bak  kernel_gen.py  permissions.py  planner.py  quality.py  router.py  search.py  seeds.json  selfcheck.py  sense.py  summarizer.py  test_aggregator.py  test_alignment.py  test_behavioral.py  test_coherence.py  test_coordinator.py  test_eval_parity.py  test_goals.py  test_permissions.py  test_planner.py  test_selfcheck.py  (+4 more)
agent-dashboard/: AGENTS.md  autonomous_executor.py  cli_executor.py  dashboard.html  executor_status.json  requirements.txt  server.py  start_all.ps1  start_dashboard.bat  start_dashboard.ps1
agent-team/: D:\_CLAUDE-TOOLS\agent-team\agent_status.json  README.md  Run-AgentDemo.bat  Start-AgentDashboard.bat  __init__.py  agent_prompts.py  agent_speak.py  agent_speak.sh  agent_status.json  agent_voice.py  autonomous_agents.py  browser_capture.py  dialogue_orchestrator.py  dialogue_v2.py  director.py  execution_bridge.py  full_session_30min.py  interactive_browser.py  live_director.py  live_self_improvement_session.py  live_session.py  position_browser.ps1  record_session.ps1  run_team.py  screenshot_service.py  self_improvement_session.py  session_api.py  session_runner.py  speech_coordinator.py  task_status.py  team.py  test_dashboard_views.py  test_voices.py  turn_state.json  visual_session.py  visual_sync.py  voice_registry.json
ai-render/: config.json  render_flux.py  render_preserve.py  render_revit.py  render_smart.py  render_view.py  render_view_v2.py  test_replicate.py
chrome-cdp/: cdp  (+2 more)
claude-memory-server/: .gitignore  LICENSE  README.md  install.py  memory_tools.py  pyproject.toml  requirements.txt
claude-memory-server/data/: memories.db.backup_20260125_111413
claude-memory-server/scripts/: backup-memory.py  backup-memory.sh
claude-memory-server/src/: engram.py  server.py
claude-memory-server/src/claude_memory/: __init__.py  kernel_gen.py  server.py
code_memory_system/: .env.example  README.md  code_memory.py  pyproject.toml  requirements.txt
code_memory_system/examples/: basic_usage.py
code_memory_system/src/cli/: main.py
code_memory_system/src/core/: code_memory.py  config.py  database.py  models.py
code_memory_system/src/indexing/: base.py  embeddings.py  indexer.py  python_parser.py  scanner.py
code_memory_system/src/memory/: cache_manager.py
code_memory_system/src/retrieval/: context_retriever.py  query_classifier.py  vector_store.py
code_memory_system/src/session/: session_manager.py
code_memory_system/test_project/: auth.py
floor-plan-vision-mcp/: pyproject.toml  requirements.txt
floor-plan-vision-mcp/src/: __init__.py  server.py
voice-notes/: README.md  jarvis_notes.md  mic_notes.md  pyproject.toml  real_meeting_notes.md  requirements.txt  setup.py  test_output.md  transcription_result.md  voice-notes
voice-notes/voice_notes/: __init__.py  cli.py  note_formatter.py  transcriber.py
weber-sdk/: README.md  pyproject.toml  test_sdk.py
weber-sdk/examples/: basic_usage.py  excel_automation.py  multi_server.py  revit_automation.py  voice_assistant.py
weber-sdk/tests/: __init__.py  test_client.py  test_discovery.py  test_services.py
weber-sdk/weber_sdk/: __init__.py  client.py  discovery.py  exceptions.py
weber-sdk/weber_sdk/services/: __init__.py  base.py  excel.py  generic.py  revit.py  voice.py
weber-sdk/weber_sdk/transports/: __init__.py  base.py  stdio.py
weber-sdk/weber_sdk/utils/: __init__.py  sync.py
(+3026 files in other folders)
