[project]
name = "floor-plan-vision-mcp"
version = "1.0.0"
description = "MCP server for floor plan extraction and analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pymupdf>=1.23.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
]

[project.scripts]
floor-plan-vision-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
