[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weber-sdk"
version = "0.1.0"
description = "Unified Python SDK wrapping all MCP servers for Weber's automation environment"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Weber Gouin", email = "weberg619@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["mcp", "automation", "revit", "excel", "voice", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "httpx>=0.25.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
"Homepage" = "https://github.com/weberg619/weber-sdk"
"Documentation" = "https://github.com/weberg619/weber-sdk#readme"

[tool.hatch.build.targets.wheel]
packages = ["weber_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
